--- a/public/index.html
+++ b/public/index.html
@@ -1,41 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <!-- :white_tick: Updated SEO + Social Meta Tags -->
+  <title>Rajvirsinh Dabhi – MERN Stack Developer Portfolio</title>
+  <meta name="title" content="Piyush Chauhan– MERN Stack Developer Portfolio" />
+  <meta name="description" content="I'm Piyush Chauhan, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development." />
+  <!-- Open Graph / LinkedIn / Facebook / WhatsApp -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://your-portfolio-url.vercel.app/" />
+  <meta property="og:title" content="Piyush Chauhan – MERN Stack Developer Portfolio" />
+  <meta property="og:description" content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development." />
+  <meta property="og:image" content="https://media.licdn.com/dms/image/v2/D5616AQFIn4KqnWtbjw/profile-displaybackgroundimage-shrink_350_1400/B56ZfQKkVZGQAY-/0/1751544122324?e=1756944000&v=beta&t=OfW8xRqAMxrxD9CjerYbtBHwwbPzIDBdcVQWZEjjDNo />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://your-portfolio-url.vercel.app/" />
+  <meta property="twitter:title" content="Piyush Chauhan – MERN Stack Developer Portfolio" />
+  <meta property="twitter:description" content="I'm Rajvirsinh Dabhi, a passionate MERN Stack Developer. Explore my projects, skills, and educational journey in web development." />
+  <meta property="twitter:image" content="https://media.licdn.com/dms/image/v2/D5616AQFIn4KqnWtbjw/profile-displaybackgroundimage-shrink_350_1400/B56ZfQKkVZGQAY-/0/1751544122324?e=1756944000&v=beta&t=OfW8xRqAMxrxD9CjerYbtBHwwbPzIDBdcVQWZEjjDNo" />
+  <!-- Apple icon and manifest -->
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+</head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
-
       You can add webfonts, meta tags, or analytics to this file.
       The build step will place the bundled scripts into the <body> tag.
-
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
